--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <div>
+    <h2>Unordered List</h2>
+    <ul>
+        <li>Chocolate</li>
+        <li>Rumming</li>
+        <li>Scooters</li>
+    </ul>
+    <h2>Ordered List</h2>
+    <ol>
+        <li>Quebec</li>
+        <li>Uganda</li>
+        <li>Iceland</li>
+    </ol>
+    </div>
 </body>
 </html>
